KSENROLL-13884: fixed spacing on course search details when additional info is displayed
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@73321 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/searchResults.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/searchResults.less
@@ -1,3 +1,7 @@
+// Variables
+@leftRightPadding: 1.15rem;
+@firstResultPadding: @leftRightPadding - 0.5;
+
 .kscr-Search-results {
   .util-Grid-cell;
   color: @primaryTextColor;
@@ -33,11 +37,11 @@
   .font-size(14);
   font-weight: bold;
   background-color: @cardBorderColor;
-  padding: 1rem 1.25rem;
+  padding: 1rem @leftRightPadding;
 }
 
 .kscr-Search-results-cell {
-  padding: 1rem 1.25rem;
+  padding: 1rem @leftRightPadding;
   border-bottom: @horizontalLineBorder;
 }
 
@@ -158,7 +162,7 @@
 }
 
 .kscr-Search-results--first {
-  padding-left: 0.75rem;
+  padding-left: @firstResultPadding;
 }
 
 // small format styling
